feat: Add admin dashboard layout and functionality; implement sidebar navigation, dashboard cards, and recent activity feed

--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -16,8 +16,8 @@
             <div class="col-lg-2 col-md-6 mb-4">
                 <h5>Explore</h5>
                 <div class="footer-links">
-                    <a href="#"><i class="fas fa-chevron-right"></i> Home</a>
-                    <a href="#"><i class="fas fa-chevron-right"></i> Reflections</a>
+                    <a href="/"><i class="fas fa-chevron-right"></i> Home</a>
+                    <a href="/blog"><i class="fas fa-chevron-right"></i> Reflections</a>
                     <a href="#"><i class="fas fa-chevron-right"></i> Stories</a>
                     <a href="#"><i class="fas fa-chevron-right"></i> Prayers</a>
                     <a href="#"><i class="fas fa-chevron-right"></i> About</a>
