feat(category): Implement admin category management with CRUD operations, pagination, and views

--- a/src/views/layouts/admin.html
+++ b/src/views/layouts/admin.html
@@ -49,6 +49,12 @@
                     </a>
                 </li>
                 <li>
+                    <a href="/admin/category">
+                        <i class="fas fa-pray"></i>
+                        <span>Categories</span>
+                    </a>
+                </li>
+                <li>
                     <a href="#">
                         <i class="fas fa-comments"></i>
                         <span>Comments</span>
