--- a/src/modules/blog/views/admins/blog_list.html
+++ b/src/modules/blog/views/admins/blog_list.html
@@ -182,23 +182,7 @@
     </table>
   </div>
 
-  <!-- Pagination -->
-  <div class="pagination-container">
-    <div class="pagination-info">Showing 1 to 5 of 35 posts</div>
-    <nav>
-      <ul class="pagination">
-        <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1">Previous</a>
-        </li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-          <a class="page-link" href="#">Next</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
+  {{> pagination}}
 </div>
 </main>
 
